--- a/translations/cs.json
+++ b/translations/cs.json
@@ -900,6 +900,10 @@
     "june_2022_mission_1": "Dva druhy kvetoucích rostlin (podkmen Angiospermae, krytosemenné)",
     "june_2022_mission_2": "Dva druhy v:\n\n-řádu Coleoptera (brouci);\n-řádu Diptera (mouchy);\n-řádu Lepidoptera (motýli)\nepičeledi Anthophila (včely)",
     "june_2022_description_most_fruits_and_seeds": "Většina ovoce a semen, které v přírodě objevíte, je výsledkem úspěšného opylování. Včely nejsou jediným hmyzem, který působí jako opylovači! Po opylení se květina mění v plod, který obsahuje semínka. Viděli jste nějaké rostliny s rozvíjejícími se plody ovoce?",
-    "june_2022_action_busy_pollinators": "Pracovití opylovači, jako jsou včely a další hmyz, udržují naši místní rostlinnou populaci zdravou a rozmanitou. Zjistěte více o tajném životě včel shlédnutím nového filmu Moje zahrada tisíců včel na PBS Nature. A zasaďte své vlastní divoké květiny, abyste zjistili, jaké přitahují opylovače. #PlantWildflowers"
+    "june_2022_action_busy_pollinators": "Pracovití opylovači, jako jsou včely a další hmyz, udržují naši místní rostlinnou populaci zdravou a rozmanitou. Zjistěte více o tajném životě včel shlédnutím nového filmu Moje zahrada tisíců včel na PBS Nature. A zasaďte své vlastní divoké květiny, abyste zjistili, jaké přitahují opylovače. #PlantWildflowers",
+    "july_2022_challenge_name_exoskeleton": "Výzva exoskeletu",
+    "july_2022_mission_1": "Najdi 5 druhů členovců",
+    "july_2022_description_insects_crustaceans": "Hmyz, korýši, pavoukovci, stonožky a mnohonožky mají exoskelet neboli vnější kostru. Na rozdíl od lidí a jiných obratlovců nemají vnitřní kostru, takže svaly se upínají uvnitř exoskeletu a umožňují pohyb. Exoskelet také chrání před vyschnutím a obsahuje  smyslové orgány podobné těm v lidské kůži.",
+    "july_2022_action_molted_exoskeleton": "Našli jste někdy prázdný, svlečený exoskelet? Exoskelet neroste s živočichem, takže se musí během růstu vyměnit."
   }
 }
