--- a/translations/it.json
+++ b/translations/it.json
@@ -900,6 +900,10 @@
     "june_2022_mission_1": "Due specie di piante da fiore (Subphylum Angiospermae)",
     "june_2022_mission_2": "Due specie in:\n\n-Ordine Coleoptera (Coleotteri);\n-Ordine Diptera (Mosche);\n-Ordine Lepidoptera (Farfalle e Falene)\n-Epifamilia Anthophila (Api)",
     "june_2022_description_most_fruits_and_seeds": "La maggior parte dei frutti e dei semi che si trova in natura è il risultato di un'impollinazione di successo. Le api non sono gli unici insetti che agiscono da impollinatori! Dopo l'impollinazione, il fiore si sviluppa in un frutto che contiene semi. Avete visto delle piante con frutti in sviluppo?",
-    "june_2022_action_busy_pollinators": "Impollinatori indaffarati come api e altri insetti mantengono le nostre popolazioni di piante locali sane e diverse. Scopri di più sulla vita segreta delle api guardando il nuovo film \"My Garden of a Thousand Bees\" su PBS Nature. E pianta i tuoi fiori selvatici nativi per vedere quali impollinatori attraggono. #PlantWildflowers"
+    "june_2022_action_busy_pollinators": "Impollinatori indaffarati come api e altri insetti mantengono le nostre popolazioni di piante locali sane e diverse. Scopri di più sulla vita segreta delle api guardando il nuovo film \"My Garden of a Thousand Bees\" su PBS Nature. E pianta i tuoi fiori selvatici nativi per vedere quali impollinatori attraggono. #PlantWildflowers",
+    "july_2022_challenge_name_exoskeleton": "Sfida Esoscheletro",
+    "july_2022_mission_1": "Trova 5 specie di artropodi",
+    "july_2022_description_insects_crustaceans": "Insetti, crostacei, aracnidi, centopiedi e millepiedi hanno tutti esoscheletri o \"scheletri esterni\". A differenza degli umani e di altri vertebrati, non hanno uno scheletro interno, quindi i muscoli si attaccano all'interno dell'esoscheletro e consentono il movimento. Gli esoscheletri offrono anche protezione dall'essiccamento e hanno organi di rilevamento analoghi alla pelle umana.",
+    "july_2022_action_molted_exoskeleton": "Hai mai trovato un esoscheletro vuoto dopo la muta? Gli esoscheletri non crescono insieme all'animale, quindi devono fare la muta quando crescono."
   }
 }
