--- a/translations/tr.json
+++ b/translations/tr.json
@@ -3,7 +3,7 @@
     "header": "Yakındaki türler",
     "internet_error": "Yakındaki türleri ortaya çıkarmak için internete ihtiyacımız var. Tekrar denemek için tıkla.",
     "no_location": "Konum yok",
-    "no_gps": "No GPS signal found. Please double check that you have GPS turned on",
+    "no_gps": "GPS sinyali bulunamadı. Lütfen GPS'in açık olup olmadığını kontrol edin ",
     "no_species": "Görünüşe göre yakınında gözlemlenmiş pek tür yok! Tür filtresinden konumunu değiştirmeyi veya genişletmeyi dene.",
     "input_location_above_map": "Konum bulunamadı; yukarıdan konum adı girerek haritayı yükleyip yakınlardaki türleri ara",
     "error_alert_location_services": "Devam etmek için cihazının ayarlarından konum hizmetlerini aç",
@@ -128,7 +128,7 @@
     "learn_more_about_licensing": "Yüklenen içeriğe Creative Commons Atıf-Ticari Olmayan lisansı uygulamak istiyorsan bu kutuyu işaretle. Bu; sana atıf yapıldığı ve ticari olarak kullanılmadığı sürece fotoğraflarını ve / veya gözlemlerini herkesin kopyalayıp yeniden kullanabileceği anlamına gelir. Değişik bir lisans seçebilir veya daha sonra lisansı kaldırabilirsin ancak araştırmacılarla paylaşmak için en iyi lisans budur.",
     "about_personal_information": "Kişisel Bilgiler Hakkında",
     "about_licenses": "Lisanslar Hakkında",
-    "transfer_data": "I consent to allow my personal information to be transferred to the United States of America",
+    "transfer_data": "Kişisel bilgilerimin Amerika Birleşik Devletleri'ne gönderilmesinin onayına rızam var",
     "learn_more_about_data_transfer": "Some data privacy laws, like the European Union's General Data Protection Regulation (GDPR), require explicit consent to transfer personal information from their jurisdictions to other jurisdictions where the legal protection of this information is not considered adequate. As of 2020, the European Union no longer considers the United States to be a jurisdiction that provides adequate legal protection of personal information, specifically because of the possibility of the US government surveilling data entering the US. It is possible other jurisdictions may have the same opinion.",
     "learn_more_about_data_transfer_2": "Using iNaturalist requires the storage of personal information like your email address, all iNaturalist data is stored in the United States, and we cannot be sure what legal jurisdiction you are in when you are using iNaturalist, so in order to comply with privacy laws like the GDPR, you must acknowledge that you understand and accept this risk and consent to transferring your personal information to iNaturalist's servers in the US.",
     "learn_more_about_data_transfer_3": "To learn more about what information we collect and how we use it, please see our <privacy>{{privacy}}</privacy> and <terms>{{terms}}</terms>.",
@@ -900,6 +900,10 @@
     "june_2022_mission_1": "Two species of flowering plants (Subphylum Angiospermae)",
     "june_2022_mission_2": "Two species in:\n\n-Order Coleoptera (Beetles);\n-Order Diptera (Flies);\n-Order Lepidoptera (Butterflies and Moths)\nEpifamily Anthophila (Bees)",
     "june_2022_description_most_fruits_and_seeds": "Most fruits and seeds you discover in nature are the result of successful pollination. Bees are not the only insects that act as pollinators! After pollination, the flower develops into a fruit that contains seeds. Did you see any plants with developing fruits?",
-    "june_2022_action_busy_pollinators": "Busy pollinators like bees and other insects keep our local plant populations healthy and diverse. Learn more about the secret lives of bees by watching the new film My Garden of a Thousand Bees on PBS Nature. And plant your own native wildflowers to see what pollinators they attract. #PlantWildflowers"
+    "june_2022_action_busy_pollinators": "Busy pollinators like bees and other insects keep our local plant populations healthy and diverse. Learn more about the secret lives of bees by watching the new film My Garden of a Thousand Bees on PBS Nature. And plant your own native wildflowers to see what pollinators they attract. #PlantWildflowers",
+    "july_2022_challenge_name_exoskeleton": "Exoskeleton Challenge",
+    "july_2022_mission_1": "Find 5 species of arthropods",
+    "july_2022_description_insects_crustaceans": "Insects, crustaceans, arachnids, centipedes, and millipedes all have exoskeletons, or “outer skeletons”. Unlike humans and other vertebrates, they do not have an internal skeleton, so muscles attach inside the exoskeleton and enable movement. Exoskeletons also offer protection from drying out and they have sensing organs analogous to human skin.",
+    "july_2022_action_molted_exoskeleton": "Have you ever found an empty, molted exoskeleton? Exoskeletons do not grow with the animal, so they must molt as they grow."
   }
 }
